--- a/Android_studio/PokeApp/app/src/main/res/layout/activity_detalle.xml
+++ b/Android_studio/PokeApp/app/src/main/res/layout/activity_detalle.xml
@@ -33,7 +33,7 @@
         >
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_contactos"
+            android:id="@+id/recycler_imagenes"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -57,7 +57,7 @@
             />
 
         <TextView
-
+            android:id="@+id/etq_altura"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XX"
@@ -74,7 +74,7 @@
             />
 
         <TextView
-
+            android:id="@+id/etq_peso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XX"
