--- a/Android_studio/PokeApp/app/src/main/res/layout/activity_detalle.xml
+++ b/Android_studio/PokeApp/app/src/main/res/layout/activity_detalle.xml
@@ -1,103 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@android:color/white"
+tools:context=".MainActivity"
+android:orientation="vertical"
     >
 
-    <ImageView
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="106dp"
+    android:src="@drawable/titulo_pokemon"
+    />
+
+<TextView
+    android:id="@+id/etq_nombre"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Nombre"
+    android:gravity="center"
+    android:textSize="25sp"
+    android:textStyle="bold"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:layout_marginBottom="15dp"
+    android:orientation="horizontal"
+    >
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_imagenes"
         android:layout_width="match_parent"
-        android:layout_height="106dp"
-        android:src="@drawable/titulo_pokemon"
-        />
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+</LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center"
+    >
 
     <TextView
-        android:id="@+id/etq_nombre"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre"
-        android:gravity="center"
-        android:textSize="25sp"
+        android:text="Altura:"
+        android:textSize="20sp"
         android:textStyle="bold"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/etq_altura"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="15dp"
+        android:text="XX"
+        android:textSize="20sp"
+        android:paddingHorizontal="10dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Peso :"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:id="@+id/etq_peso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="XX"
+        android:textSize="20sp"
+        android:paddingHorizontal="10dp"
+        />
+
+</LinearLayout>
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Habilidades :"
+    android:textSize="24sp"
+    android:textStyle="bold"
+    android:layout_marginLeft="130dp"
+    android:layout_marginTop="28dp"
+    />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="15dp">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_habilidades"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         >
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_imagenes"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    </androidx.recyclerview.widget.RecyclerView>
 
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Altura:"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            />
-
-        <TextView
-            android:id="@+id/etq_altura"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="XX"
-            android:textSize="20sp"
-            android:paddingHorizontal="10dp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Peso :"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            />
-
-        <TextView
-            android:id="@+id/etq_peso"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="XX"
-            android:textSize="20sp"
-            android:paddingHorizontal="10dp"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_contacto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </LinearLayout>
+</LinearLayout>
 
 </LinearLayout>
